Wed Jan 16 01:01:38 2002  George Lebl <jirka@5z.com>

	* applet.[ch], panel-applet-frame.c: Make sure the AppletInfo is
	  freed, fix a possible race with applet destruction.  There are
	  some somewhat evil things still around here.  Fear.

	* panel-util.[ch], applet.c, gnome-run.c, menu-fentry.c, menu.c, 
	  panel.c: make deep_free list functions and use them

Tue Jan 15 15:05:46 2002  George Lebl <jirka@5z.com>

	* button-widget.[ch], panel-types.h, drawer.c, menu.c, launcher.c,
	  logout.c:  Remove the button widget type enum, it's not needed
	  without tiles

	* button-widget.c: draw the focus frame thingie over the icon
	  if we are focused.  You can now tab between launchers and
	  see where you are :)

	* panel-util.c: some warning fixes

2002-01-15  Padraig O'Briain  <padraig.obriain@sun.com>

	* menu-util.c (panel_menu_position):
	Ensure that menu position is close to panel even if popped up by
	keystroke.

	* panel.c:
	Add panel_do_popup_menu() and panel_popup_menu() to support popping
	up of menu using Shift+F10

2002-01-14  Padraig O'Briain  <padraig.obriain@sun.com>

	reviewed by: Mark McLoughlin <mark@skynet.ie>

	* basep_widget.c  foobar-widget.c menu.c 
	Use GtkButton's in_button field instead of ButtonWidget's

	* button-widget.[ch]:
	Derive ButtonWidget from GtkButton instead of GtkWidget; use
	GtkButton's pressed, released and clicked signals instead of signals
	defined in ButtonWidget; ButtonWidget now can receive focus and react
	to keystrokes.
	Remove calls to g_return_if_fail (foo != NULL) if followed by calls
	to g_return_if_fail (GTK_IS_BAR (foo));
	
2002-01-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: distcheck fix.

Mon Jan 14 01:40:25 2002  George Lebl <jirka@5z.com>

	* launcher.c, panel-util.[ch]: Add a directory ensuring function
	  that ensures the whole path exists and use it instead of mkdir
	  when hoarding launchers.  This seems to make things work for me.

2002-01-14  Glynn Foster  <glynn.foster@sun.com>
